--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 .marketa {
   background-color: #0d99a9;
   flex-basis: 50%;
-  padding: 50px 70px 50px 70px;
+  padding: 50px 100px 50px 100px;
   color: white;
 }
 
@@ -47,8 +47,7 @@ body {
   margin: 0;
   min-height: 45vh;
   color: white;
-  padding: 20px 100px 20px 100px;
-  text-align: center;
+  padding: 50px 100px 20px 100px;
 }
 
 .o_projektu {
@@ -243,4 +242,16 @@ a {
 
 .tlacitko__Marketa {
   color: #f0d8d5;
+}
+
+@media (max-width: 600px) {
+  .o_nas {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box__magda {
+    display: flex;
+    flex-direction: column;
+  }
 }
